main/deployment/istio.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: systems-environment-management-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: systems-environment-management
spec:
  hosts:
  - "*"
  gateways:
  - systems-environment-management-gateway
  http:
  - route:
    - destination:
        host: systems-environment-management
        port:
          number: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: systems-environment-management
spec:
  host: systems-environment-management
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
